--- a/config-service/src/main/resources/application.yaml
+++ b/config-service/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
     config:
       server:
         git:
-          default-label: eureka
+          default-label: multiple-instances
           uri: https://github.com/Calapzu/Curso-Microservicios-Spring-Boot
           search-paths: config-data
   application:
